# Barebones_LList

./: .gitignore  CMakeLists.txt  README.md  build.bat
headers/: general_utils.h  linkedsys.h
source/: general_utils.c  linkedsys.c  main.c
